[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-mempalace"
version = "1.0.0"
description = "Standalone MemPalace memory provider plugin for Hermes Agent"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pytest.ini_options]
addopts = "-q"
